# sabor_express

./: .gitignore  README.md  pyproject.toml
data/: restaurants_metadata.json
src/: main.py
src/api/: router.py
src/api/endpoints/: restaurants.py
src/cli/: __init__.py  menu.py
src/cli/components/: api_client.py  ui.py
src/core/: config.py
src/models/: schemas.py
src/utils/: classifier.py  data_fetcher.py  data_reader.py
